# Agentic-AI

./: README.md
mainframe-modernization-summit-2026/: README.md  fix_tls.py  pyproject.toml
mainframe-modernization-summit-2026/00-hello-world/: README.md  greeter.yaml  presentation.md  zos_connection.yaml
mainframe-modernization-summit-2026/00-hello-world/tools/: greetings.py  zos_console.py
mainframe-modernization-summit-2026/01-sysops-prototype/: agent.yaml  group_2_sysops_supervisor_implementation_plan.md  servicenow_agent.yaml  zos_commands_agent.yaml
mainframe-modernization-summit-2026/01-sysops-prototype/connections/: servicenow_connection.yaml  zos_connection.yaml
mainframe-modernization-summit-2026/01-sysops-prototype/tools/: servicenow.py  zos_console.py
mainframe-modernization-summit-2026/docs-site/: README.md  mkdocs.yml  requirements.txt
mainframe-modernization-summit-2026/docs-site/docs/: 404.md  changelog.md  index.md
mainframe-modernization-summit-2026/docs-site/docs/challenges/: data-analysis.md  index.md  sysops-foundation.md
mainframe-modernization-summit-2026/docs-site/docs/overrides/: main.html
mainframe-modernization-summit-2026/docs-site/docs/reference/: contacts.md  glossary.md  zosmf-console-api.md
mainframe-modernization-summit-2026/docs-site/docs/setup/: index.md  macos.md  mainframe.md  pull-latest.md  verify.md  windows.md
mainframe-modernization-summit-2026/reference/: adk-quickref.md  agent-architecture.md
mainframe-modernization-summit-2026/scripts/: fix_tls.py
(+4 files in other folders)
